<resources>
    <string name="app_name">CatalogueMovieUI_UX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">Favorite Movie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="now_playing">NOW PLAYING</string>
    <string name="upcoming">UPCOMING</string>
    <string name="masukan_nama_film">Search</string>
    <string name="description">Deskripsi</string>
    <string name="cari">Search</string>
    <string name="date">Release</string>
    <string name="title">title</string>
    <string name="Language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="notify_daily">Hello there, Let Check It Out Some Good Movies</string>
    <string name="today__release_reminder">%s Release today, don\'t forget to watch it!</string>


    <string name="key_today_reminder">key_today_reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="select_daily_reminder">You will reveiced daily reminder every 8 AM</string>
    <string name="key_release_reminder">key_release_reminder</string>
    <string name="select_release_reminder">You will receive daily movie release info every 7 AM</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="lang_title">Language</string>
    <string name="select_lang">Select language</string>
    <string name="lang">Language</string>
    <string name="key_lang">key_lang</string>
    <string name="notifications">Notifications</string>




    <string name="empty_text">NO DATA</string>

    <string name="click_me_to_see_the_awesomeness">Click me to see the Awesomeness!</string>
    <string name="m_iqbal">Muhammad Iqbal Fadillah</string>
    <string name="home">Home</string>
    <string name="MyBlog">iqbalitfadil@gmail.com</string>
    <string name="Now_Play">Now Playing</string>
    <string name="Up_coming">Up Coming</string>
    <string name="Fav_movie">Favorite List</string>
    <string name="detail">Detail</string>
    <string name="favorit">Favorite</string>
    <string name="search">Search</string>
    <string name="score">%s/10 Score</string>
    <string name="play_slideshow">Trailer</string>
    <string name="save">Saved Movie</string>
    <string name="delete">Movie Has Been Deleted</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_settings_prefernces">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
