<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/lang">
        <Preference
            android:summary="@string/select_lang"
            android:title="@string/lang"
            android:key="@string/key_lang">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_today_reminder"
            android:summary="@string/select_daily_reminder"
            android:title="@string/daily_reminder" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_release_reminder"
            android:summary="@string/select_release_reminder"
            android:title="@string/release_reminder" />
    </PreferenceCategory>

</PreferenceScreen>
