<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:cr_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cr_view"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    cr_view:cardCornerRadius="4dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/cr_movies">

        <RelativeLayout
            android:id="@+id/rel_item_now_play"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_toRightOf="@id/img_item_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_item_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_name"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_toRightOf="@id/img_item_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/rate" />

            <TextView
                android:id="@+id/tv_item_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_rate"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_toRightOf="@id/img_item_photo"
                android:maxLines="5"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_toRightOf="@+id/img_item_photo"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:maxLines="2"
                tools:text="@string/date" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp">
            <Button
                android:id="@+id/btn_set_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/detail"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_set_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/share"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>